Fix spacing

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -37,9 +37,8 @@ b {
 }
 
 .vis-inset {
-    height: 40vh;
+    height: 35vh;
 }
-
 .vis-inset-long {
     height: 45vh;
 }
